--- a/Cargo.toml
+++ b/Cargo.toml
@@ -199,7 +199,7 @@ rustix = "0.37.13"
 wit-bindgen = { version = "0.7.0", default-features = false }
 
 # wasm-tools family:
-wasmparser = "0.107.0"
+wasmparser = { version= "0.107.0", default-features = false }
 wat = "1.0.66"
 wast = "60.0.0"
 wasmprinter = "0.2.59"
@@ -213,7 +213,6 @@ wit-component = "0.11.0"
 # --------------------------
 object = { version = "0.30.3", default-features = false, features = ['read_core', 'elf', 'std'] }
 gimli = { version = "0.27.0", default-features = false, features = ['read', 'std'] }
-anyhow = "1.0.22"
 windows-sys = "0.48.0"
 env_logger = "0.10"
 log = { version = "0.4.8", default-features = false }
@@ -224,7 +223,10 @@ once_cell = "1.12.0"
 smallvec = { version = "1.6.1", features = ["union"] }
 tracing = "0.1.26"
 bitflags = "1.2"
+anyhow = { version = "1.0.22", default-features = false }
+core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"]  }
 thiserror = "1.0.15"
+thiserror_core2 = { version = "2.0.0", default-features = false }
 async-trait = "0.1.42"
 heck = "0.4"
 similar = "2.1.0"
