--- a/crates/environ/Cargo.toml
+++ b/crates/environ/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 cranelift-entity = { workspace = true }
-wasmtime-types = { workspace = true }
+wasmtime-types = { workspace = true, default-features = false }
 wasmparser = { workspace = true }
 indexmap = { version = "1.0.2", features = ["serde-1"] }
 thiserror = { workspace = true }
