--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -17,5 +17,5 @@ thiserror_core2 = { workspace = true }
 wasmparser = { workspace = true }
 
 [features]
-default = ["std"]
+default = []
 std = ["thiserror"]
